--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -12,15 +12,17 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Name="PYText" Grid.Row="0" AcceptsTab="True" TextWrapping="Wrap" AcceptsReturn="True">python code here</TextBox>
-        <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
-        <TextBlock Name="StdoutDisp" Grid.Row="0" Grid.Column="2" TextWrapping="Wrap"/>
-        <Button Grid.Row="1" Click="Button_Click">Run code</Button>
-        <Button Grid.Row="1" Grid.Column="2" Name="KillProcessBtn" Click="KillProcessBtn_Click">Kill Process</Button>
+        <TextBox Name="PYText" Grid.ColumnSpan="2" Grid.Row="0" AcceptsTab="True" TextWrapping="Wrap" AcceptsReturn="True">python code here</TextBox>
+        <GridSplitter Grid.Column="2"  Width="5" HorizontalAlignment="Stretch" />
+        <TextBlock Name="StdoutDisp" Grid.Row="0" Grid.Column="3" TextWrapping="Wrap"/>
+        <Button Grid.Row="1" Grid.Column="0" x:Name="CompileBut" Click="CompileBut_Click">Compile code</Button>
+        <Button Grid.Row="1" Grid.Column="1" x:Name="RunBut" Click="RunBut_Click">Run code</Button>
+        <Button Grid.Row="1" Grid.Column="3" Name="KillProcessBtn" Click="KillProcessBtn_Click">Kill Process</Button>
     </Grid>
 
 
